# ld-exts

./: .clang-format  .gitignore  Cargo.toml  README.md  test.c  test.cpp  test.rs  txt.c  txt.rs
src/: lib.rs  main.rs
src/syntax_c/: lexis.rs  mod.rs  old_lexer.rs  syntax.rs  todo.md
src/syntax_cpp/: lexis.rs  mod.rs  syntax.rs
src/syntax_json/: formatter.rs  lexis.rs  syntax.rs
src/syntax_json/highlighter/: mod.rs
src/syntax_rust/: formatter.rs  lexis.rs  mod.rs  old_lexis.rs  syntax.rs
src/syntax_xml/: formatter.rs  lexis.rs  mod.rs  syntax.rs
src/tests/: balance.rs  document.rs  iteration.rs  json.rs  position.rs  token.rs
