[package]
name = "ld-exts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lady-deirdre = { git = "https://github.com/eliah-lakhin/lady-deirdre" }
# lady-deirdre = { path = "./ld" }
# lady-deirdre = "1.0.3"

[dev-dependencies]
criterion = "0.4.0"
